@@ -4,6 +4,7 @@ CHANGES
 
 1.4 (unreleased)
 ----------------
+ - Improve exception handling
 
 1.3 (2009-08-02)
 ----------------
